Updated by task 'AutomatedMDTask_1676310931037_TM-MT_1676310966407'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics-platform.en/commit/957450b8dfddfc015298c3338acb127fd2ee361b

--- a/help/release-notes/2020.md
+++ b/help/release-notes/2020.md
@@ -3,10 +3,10 @@ title: Versionshinweise zu Customer Journey Analytics für 2020 anzeigen
 description: Versionshinweise zu CJA für 2020
 feature: Release Notes
 exl-id: 11a5e26c-8598-4a1b-9b46-ff9cb4a808cc
-source-git-commit: 9afc0931622509769e53ff5df3ffaa2d99894488
-workflow-type: ht
-source-wordcount: '2197'
-ht-degree: 100%
+source-git-commit: af9113f3afced902b385747bceaa9e51b72d83e6
+workflow-type: tm+mt
+source-wordcount: '2198'
+ht-degree: 98%
 
 ---
 
@@ -21,7 +21,7 @@ ht-degree: 100%
 | Einschränkung bei der Aufstockung entfernt | 19. Oktober 2020 | Um ein verbessertes CJA-Erlebnis zu bieten, haben wir die Beschränkung für die Aufstockung (Import historischer Daten) entfernt. Bisher konnten Sie maximal 2,5 Milliarden Zeilen selbst aufstocken und benötigten ansonsten technische Unterstützung. Jetzt können Sie Daten ohne Einschränkung selbst aufstocken. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/create-connection.html?lang=de#enable-connection) |
 | Hilfeseite zur Leistung von Analysis Workspace | 22. Oktober 2020 | Auf der Hilfeseite zur Leistung von Analysis Workspace werden die verschiedenen Faktoren, die die Projektleistung beeinflussen, sowie Links zu Optimierungs-Tipps angezeigt. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/workspace-faq/optimizing-performance.html?lang=de) |
 | Metriken und Dimensionen der [!UICONTROL Besuchszeit] | 30. Oktober 2020 | Metriken und Dimensionen der [!UICONTROL Besuchszeit] ermöglichen es Ihnen, die Zeit zu bestimmen, die die Kunden in verschiedenen Abschnitten der Customer Journey verbringen. So erhalten Sie eine umfassendere Ansicht der Interaktionen und Engpässe aller Kanäle. |
-| [!UICONTROL Geräte]- und [!UICONTROL Geografie]-Dimensionen | 30. Oktober 2020 | [!UICONTROL Geräte]- und [!UICONTROL Geografie]-Dimensionen sind jetzt standardmäßig als Teil des Projekts „Globale Suche“ im [Adobe Analytics-Quell-Connector](https://experienceleague.adobe.com/docs/platform-learn/tutorials/data-ingestion/ingest-data-from-adobe-analytics.html?lang=de) verfügbar. Dieser dringend benötigte Zusatz erhöht die [Parität zwischen Adobe Analytics und CJA](/help/getting-started/aa-vs-cja/cja-aa.md). |
+| [!UICONTROL Geräte]- und [!UICONTROL Geografie]-Dimensionen | 30. Oktober 2020 | [!UICONTROL Gerät] und [!UICONTROL Geografie] -Dimensionen sind jetzt standardmäßig als Teil des Projekts &quot;Globale Suche&quot;im [Adobe Analytics Source Connector](https://experienceleague.adobe.com/docs/platform-learn/tutorials/data-ingestion/ingest-data-from-adobe-analytics.html?lang=de). Dieser dringend benötigte Zusatz erhöht die [Parität zwischen Adobe Analytics und CJA](/help/getting-started/aa-vs-cja/cja-aa.md). |
 | Journey IQ: Cross-Channel Analytics | 11. Januar 2021 | Journey IQ: Die Cross-Channel Analytics ermöglicht es Kunden, einen Adobe Analytics-Ereignis-Datensatz (oder einen anderen) im Adobe Experience Platform Data Lake von einem ID-Namespace zum anderen erneut zu verschlüsseln. Dies bedeutet in der Regel, dass der Ereignis-Datensatz von einer Cookie-basierten ID in eine personenbasierte ID erneut verschlüsselt wird. Auf diese Weise kann der neu verschlüsselte Datensatz mit anderen personenbasierten Daten in einer CJA-Verbindung kombiniert werden, wodurch eine geräteübergreifende/kanalübergreifende Analyse in Analysis Workspace möglich ist. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-connections/cca/overview.html?lang=de#cja-connections) |
 
 ## Oktober 2020 {#1020}
@@ -55,7 +55,7 @@ ht-degree: 100%
 
 | Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum | Beschreibung |
 | -----------| ---------- |-----|
-| Unterstützung für Objekt-Arrays | 18. Juni 2020 | CJA-Kunden können jetzt Berichte zu Dimensionen und Metriken erstellen, die in Objekt-Arrays in ihren Adobe Experience Platform-Datensatzschemas angezeigt werden. [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-usecases/object-arrays.html?lang=de) |
+| Unterstützung für Objekt-Arrays | 18. Juni 2020 | CJA-Kunden können jetzt Berichte zu Dimensionen und Metriken erstellen, die in Objekt-Arrays in ihren Adobe Experience Platform-Datensatzschemas angezeigt werden. [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-usecases/complex-data/object-arrays.html) |
 | Attribution IQ: [!UICONTROL Algorithmische Zuordnung] | 18. Juni 2020 | Das [!UICONTROL algorithmische Zuordnungsmodell] in [!UICONTROL Analysis Workspace] verwendet statistische Verfahren, um die optimale Zuordnung der Gutschrift für die ausgewählte Metrik dynamisch zu bestimmen. Verfügbar für Kunden von Adobe Analytics Ultimate. [Weitere Informationen ...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/attribution/algorithmic.html?lang=de) |
 | Attribution IQ: Benutzerdefinierte Lookback-Fenster | 18. Juni 2020 | Sie können jetzt jedes Zuordnungsmodell in [!UICONTROL Attribution IQ] so konfigurieren, dass Touchpoints von bis zu 90 Tagen vor dem Zeitraum des Berichte einbezogen werden. Dies erhöht in der Regel die Attributionsgenauigkeit bei Ereignissen, die zu Beginn des Reporting-Zeitraums eintreten, indem Interaktionen berücksichtigt werden, die in den Vormonaten stattgefunden haben. [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/attribution/models.html?lang=de) |
 | Unterstützung der [!UICONTROL Anomalieerkennung] | 18. Juni 2020 | Die [!UICONTROL Anomalieerkennung] bietet eine statistische Methode, mit der festgestellt wird, wie sich eine bestimmte Metrik in Bezug auf frühere Daten verändert hat. [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/virtual-analyst/anomaly-detection/anomaly-detection.html?lang=de) |
