Updating Old File for core commit 53b60d62d1624a8c329ca8476093743161623ba3

--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -3,10 +3,11 @@ title: Versionshinweise zu Customer Journey Analytics für 2023
 description: Versionshinweise zu CJA für 2023 anzeigen
 feature: Release Notes
 mini-toc-levels: 2
-source-git-commit: 6b42335327f6709757ec39e0a6d08699e34d8c0b
-workflow-type: tm+mt
+exl-id: e6668e32-3322-45f6-a575-413c88097e45
+source-git-commit: 814cb9d011b0d51776fdfe1fdc330775169611df
+workflow-type: ht
 source-wordcount: '469'
-ht-degree: 30%
+ht-degree: 100%
 
 ---
 
@@ -17,12 +18,12 @@ ht-degree: 30%
 | Funktion | Beschreibung | [Start des Rollouts](/help/release-notes/releases.md) | [Allgemeine Verfügbarkeit](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- | --- |
 | **Objekt-Array-Unterstützung für Profil- und Lookup-Datensätze** | Profildatensätze und Lookup-Datensätze unterstützen jetzt Objekt-Arrays zur Verwendung in CJA. | 11. Januar 2023 | 19. Januar 2023 |
-| **Ordner in Workspace** | Mit Ordnern können Sie Ihre Projekte organisieren und kategorisieren, um den Abruf und den Zugriff zu verbessern. Darüber hinaus wird eine freigegebene **[!UICONTROL Firma]** -Ordner ermöglicht es Administratoren, mühelos Inhalte zu erstellen und für alle Workspace-Benutzer freizugeben. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/build-workspace-project/workspace-folders/about-folders.html?lang=de) | Nicht angegeben | 11. Januar 2023 |
-| **Standard-Landingpage** | Die [neue Landingpage](/help/getting-started/landing.md) die Anfang 2022 eingeführt wurde, wird zum Standarderlebnis für alle Benutzer auf **11. Januar 2023**. Die veraltete Landingpage wird nicht mehr unterstützt und alle müssen das neue Erlebnis verwenden. | Nicht angegeben | 11. Januar 2023 |
-| **Seite &quot;Projektmanager&quot;veraltet** | Mit der Veröffentlichung der neuen Landingpage wird die **[!UICONTROL Projektmanager]** gemäß **[!UICONTROL Customer Journey Analytics]** > **[!UICONTROL Komponenten]**. Die neue Landingpage verfügt über alle Funktionen der alten Seite &quot;Projektmanager&quot;und mehr. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-overview/landing.html?lang=en#deprecate-pm-page) | Nicht angegeben | 11. Januar 2023 |
-| **Arbeitsmappen in Report Builder planen** | In Customer Journey Analytics können Sie Zeitpläne erstellen, um Arbeitsmappen in regelmäßigen Abständen zu senden. Jetzt können Empfänger regelmäßig die neuesten Aktualisierungen Ihrer Arbeitsmappen erhalten. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-reportbuilder/schedule-reportbuilder.html) | Nicht angegeben | 11. Januar 2023 |
-| **Automatisches Speichern neuer Projekte** | Analysis Workspace speichert jetzt automatisch neu erstellte Projekte. Wenn Sie aus irgendeinem Grund unerwartet den Zugriff auf ein neu erstelltes Projekt verlieren, bevor Sie es manuell speichern, ist jetzt eine Wiederherstellungsversion Ihres Projekts verfügbar. Zuvor wurden Projekte erst automatisch gespeichert, nachdem sie zuvor manuell gespeichert wurden. [Weitere Informationen](/help/analysis-workspace/build-workspace-project/save-projects.md) | Nicht angegeben | 11. Januar 2023 |
-| **Erweiterte Benutzereinstellungen** | Sie können jetzt zusätzliche Voreinstellungen auf Benutzerebene konfigurieren (in [!UICONTROL Komponenten] > [!UICONTROL Voreinstellungen]). Wenn Sie die Benutzereinstellungen festlegen, erstreckt sich Ihre Auswahl über Ihre Projekte, Tabellen und Visualisierungen. Die Seite Voreinstellungen enthält jetzt die folgenden neuen Registerkarten, von denen jede viele neue Konfigurationsoptionen enthält:<ul><li>Freiformtabelle</li><li>Visualisierungen >/li></ul>  Darüber hinaus sind jetzt weitere Voreinstellungen auf der **[!UICONTROL Allgemein]** und **[!UICONTROL Projekt]** Registerkarten.<p>Zuvor waren viele dieser Voreinstellungen nur für einzelne Projekte, Tabellen und Visualisierungen konfigurierbar. [Weitere Informationen](/help/analysis-workspace/user-preferences.md) | Nicht angegeben | 11. Januar 2023 |
+| **Ordner in Workspace** | Mithilfe der Ordner können Sie Ihre Projekte ordnen und kategorisieren, sodass sie besser auffindbar und abrufbar sind. Darüber hinaus ermöglicht ein freigegebener **[!UICONTROL Unternehmensordner]** Admins die einfache Erstellung von Inhalten und deren Freigabe für alle Analysis Workspace benutzenden Personen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/build-workspace-project/workspace-folders/about-folders.html?lang=de) | Nicht angegeben | 11. Januar 2023 |
+| **Standard-Landingpage** | Die [neue Landingpage](/help/getting-started/landing.md) wurde Anfang 2022 eingeführt und wird ab **11. Januar 2023** standardmäßig allen Benutzenden angezeigt. Die veraltete Seite wird entfernt, sodass nur mehr die neue Seite zur Verfügung steht. | Nicht angegeben | 11. Januar 2023 |
+| **Seite „Projekt-Manager“ entfernt** | Mit der Veröffentlichung der neuen Landingpage haben wir die Seite **[!UICONTROL Projekt-Manager]** unter **[!UICONTROL Customer Journey Analytics]** > **[!UICONTROL Komponenten]** entfernt. Die neue Landingpage enthält sämtliche Funktionen der alten Projekt-Manager-Seite und noch viel mehr. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-overview/landing.html?lang=de#deprecate-pm-page) | Nicht angegeben | 11. Januar 2023 |
+| **Erstellen von Zeitplänen für Arbeitsmappen in Report Builder** | In Customer Journey Analytics können Sie Zeitpläne erstellen, um in regelmäßigen Abständen Arbeitsmappen zu versenden. Empfänger und Empfängerinnen erhalten somit regelmäßig die neuesten Aktualisierungen Ihrer Arbeitsmappen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-reportbuilder/schedule-reportbuilder.html?lang=de) | Nicht angegeben | 11. Januar 2023 |
+| **Automatisches Speichern neuer Projekte** | Analysis Workspace speichert jetzt automatisch neu erstellte Projekte. Wenn Sie aus irgendeinem Grund unerwartet den Zugriff auf ein neu erstelltes Projekt verlieren, bevor Sie es manuell speichern konnten, ist jetzt eine Wiederherstellungsversion Ihres Projekts verfügbar. Zuvor wurden Projekte erst automatisch gespeichert, nachdem sie zuvor manuell gespeichert worden waren. [Weitere Informationen](/help/analysis-workspace/build-workspace-project/save-projects.md) | Nicht angegeben | 11. Januar 2023 |
+| **Verbesserte Benutzervoreinstellungen** | Sie können jetzt zusätzliche Voreinstellungen auf Benutzerebene konfigurieren (in [!UICONTROL Komponenten] > [!UICONTROL Voreinstellungen]). Sie können Benutzervoreinstellungen für Projekte, Tabellen und Visualisierungen festlegen. Die Seite „Voreinstellungen“ enthält jetzt auch die folgenden neuen Registerkarten, von denen jede viele neue Konfigurationsmöglichkeiten bietet:<ul><li>Freiformtabelle</li><li>Visualisierungen&lt;/li></ul>  Darüber hinaus sind jetzt weitere Voreinstellungen auf den Registerkarten **[!UICONTROL Allgemein]** und **[!UICONTROL Projekt]** verfügbar.<p>Zuvor waren viele dieser Voreinstellungen nur für einzelne Projekte, Tabellen und Visualisierungen konfigurierbar. [Weitere Informationen](/help/analysis-workspace/user-preferences.md) | Nicht angegeben | 11. Januar 2023 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -34,7 +35,6 @@ AN-287349; AN-301684; AN-305491; AN-305769; AN-307912
 
 | Hinweis | Hinweis hinzugefügt oder aktualisiert | Beschreibung |
 | --- | --- | --- |
-| **Verbessertes IP-Geolokalisierungs-Mapping** | 29. September 2022 | Der Anbieter von IP-Suchen für Adobe, Digital Element, aktualisiert auf einen neuen verbesserten Datensatz (NetAcuity Pulse) für die Geolokalisierung von IPs. Adobe Analytics hat die Annahme dieses neuen Datensatzes auf **11. Januar 2023**. Die neue Datenbank wird genauer sein als frühere Versionen. Einige Geolokalisierungen von IPs werden sich ändern/verbessern, wenn die neue Datenbank übernommen wird.<p> CJA-Daten, die über den [!UICONTROL Analytics Source Connector] bereitgestellt werden, nutzen ebenfalls automatisch die neuen Mappings. |
+| **Verbessertes IP-Geolokalisierungs-Mapping** | 29. September 2022 | Der Anbieter von IP-Suchen für Adobe, Digital Element, aktualisiert auf einen neuen verbesserten Datensatz (NetAcuity Pulse) für die Geolokalisierung von IPs. Adobe Analytics hat die Einführung dieses neuen Datensatzes auf **11. Januar 2023** verschoben. Die neue Datenbank wird genauer sein als frühere Versionen. Einige Geolokalisierungen von IPs werden sich ändern/verbessern, wenn die neue Datenbank übernommen wird.<p> CJA-Daten, die über den [!UICONTROL Analytics Source Connector] bereitgestellt werden, nutzen ebenfalls automatisch die neuen Mappings. |
 
 {style=&quot;table-layout:auto&quot;}
-
