Updated by task 'AutomatedMDTask_1677892217298_TM-MT_1677892249691'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics-platform.en/commit/7a1eebf5cb19408e61107cef7683d39d7e6802d4

--- a/help/release-notes/2021.md
+++ b/help/release-notes/2021.md
@@ -3,10 +3,10 @@ title: Versionshinweise zu Customer Journey Analytics für 2021 anzeigen
 description: Versionshinweise zu CJA für 2021
 exl-id: 8647ebfc-59cf-44ab-8869-11e892eab84e
 feature: Release Notes
-source-git-commit: 9afc0931622509769e53ff5df3ffaa2d99894488
-workflow-type: ht
+source-git-commit: dac10a1e4848514661bf06fe71d233da6f9aa878
+workflow-type: tm+mt
 source-wordcount: '1951'
-ht-degree: 100%
+ht-degree: 99%
 
 ---
 
@@ -34,13 +34,13 @@ ht-degree: 100%
 
 | Funktion | Beschreibung | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/technotes/releases.html?lang=de) – geplantes Datum |
 | ----------- | ---------- | ----- |
-| Rollierendes Fenster für die Datenaufbewahrung auf [!UICONTROL Verbindungsebene] | **Hinweis: Wenden Sie sich an die Kundenunterstützung oder Ihren Adobe Account Manager, um diese Einstellung implementieren zu lassen. Sie ist noch nicht über die UI von CJA verfügbar.**<p>Ermöglicht die Definition einer CJA-Datenbeibehaltungseinstellung als rollierendes Fenster in Monaten (3 Monate, 6 Monate usw.) auf einer [!UICONTROL Verbindungs]-Ebene (nicht auf einer [!UICONTROL Datensatz]-Ebene). Die Datenaufbewahrung basiert auf Zeitstempeln für Ereignis-Datensätze und gilt nur für Ereignis-Datensätze. Für Profil- oder Lookup-Datensätze gibt es keine Datenaufbewahrungseinstellung, da keine entsprechenden Zeitstempel vorhanden sind. Der Hauptvorteil besteht darin, dass Sie nur Daten speichern oder Berichte dazu erstellen, die anwendbar und nützlich sind, und ältere Daten löschen, die nicht mehr nützlich sind. Dies hilft Ihnen, Ihre vertraglichen Beschränkungen einzuhalten und das Risiko bezüglich Kostendeckung zu reduzieren. | 7. Oktober 2021 |
+| Rollierendes Fenster für die Datenaufbewahrung auf [!UICONTROL Verbindungsebene] | **Hinweis: Wenden Sie sich an die Kundenunterstützung oder Ihr Adobe Account Team, um diese Einstellung implementieren zu lassen. Sie ist noch nicht über die UI von CJA verfügbar.**<p>Ermöglicht die Definition einer CJA-Datenbeibehaltungseinstellung als rollierendes Fenster in Monaten (3 Monate, 6 Monate usw.) auf einer [!UICONTROL Verbindungs]-Ebene (nicht auf einer [!UICONTROL Datensatz]-Ebene). Die Datenaufbewahrung basiert auf Zeitstempeln für Ereignis-Datensätze und gilt nur für Ereignis-Datensätze. Für Profil- oder Lookup-Datensätze gibt es keine Datenaufbewahrungseinstellung, da keine entsprechenden Zeitstempel vorhanden sind. Der Hauptvorteil besteht darin, dass Sie nur Daten speichern oder Berichte dazu erstellen, die anwendbar und nützlich sind, und ältere Daten löschen, die nicht mehr nützlich sind. Dies hilft Ihnen, Ihre vertraglichen Beschränkungen einzuhalten und das Risiko bezüglich Kostendeckung zu reduzieren. | 7. Oktober 2021 |
 | Report Builder-Support | Report Builder ist ein Microsoft® [!DNL Excel]-Add-in, mit dem Sie benutzerspezifische Berichte einfach erstellen, bearbeiten und aktualisieren können, indem Sie Customer Journey Analytics-Daten verwenden. Mit Report Builder und Excel können Sie die einfache, aber flexible Drag-and-Drop-Benutzeroberfläche verwenden, um einfach komplexe Datenanforderungen zu erstellen. Report Builder für Customer Journey Analytics ermöglicht Ihnen Folgendes:<ul><li>Referenzieren vorhandener Arbeitsblattzellen zur Erstellung der gewünschten Zeilenreihenfolge sowie des entsprechenden Datumsbereichs oder Filters</li><li>Erstellen von benutzerdefinierten Datumsangaben mithilfe von Kalendern, Zellbezügen oder mathematischen Berechnungen</li><li>Gestalten Ihrer Tabellen und Visualisierungen mit den bekannten Excel-Formatierungswerkzeugen</li><li>Verfügbar für Excel unter macOS, Microsoft 365 für das Web und Microsoft Windows</li></ul>[Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-reportbuilder/report-buider-overview.html?lang=de) | 7. Oktober 2021 |
 | Visualisierungen für Analytics-Dashboards | Analytics [!UICONTROL Dashboards] führt drei neue Visualisierungen ein, um Führungskräften und Entscheidungsträgern einen noch besseren Überblick über ihre Daten zu vermitteln. Die neuen Ring-, Linien- und horizontalen Balkendiagramme erleichtern die Anzeige von Daten für einzelne Dimensionselemente, ohne dass eine Detailansicht geöffnet werden muss. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dashboards/create-scorecard.html?lang=de#apply-visualizations) | 7. Oktober 2021 |
 | Customer Journey Analytics Audit Logs-API | Über den API-Endpunkt [Administratorprotokoll](https://adobe.io/cja-apis/docs/endpoints/auditlogs/) können Sie Administratorprotokoll-Daten von Adobe anfordern. Es ist ein wichtiger Teil der Sicherheitskonformität sowie zum Auditing von Daten oder Benutzeraktionen. | 7. Oktober 2021 |
 | Quick [!UICONTROL Filter Builder] | Ermöglicht es Business-Anwendern, Standardsegmente in einem vereinfachten Inline-Projekt-Workflow schnell zu nutzen. Sie müssen nicht zum [!UICONTROL Filter Builder] wechseln. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-components/cja-filters/quick-filters.html?lang=de) | 21. Oktober 2021 |
 | Verbesserungen bei der Suche in der linken Leiste in Analysis Workspace | 1) Bei der Suche in der linken Leiste werden exakte Übereinstimmungen vor weit gefassten Übereinstimmungen priorisiert, zusätzlich zur weiteren Berücksichtigung von Neuigkeit und Relevanz der Komponenten. 2) Es werden übereinstimmende Zeichen hervorgehoben, um Suchergebnisse leichter verständlich zu machen. 3) Klassifizierungen, die sich auf eine Dimension beziehen, lassen sich leichter finden. 4) Schließlich wird die Suche mit Platzhaltern (`*`) unterstützt, sodass bestimmte benötigte Komponenten leichter gefunden werden können. Hinweis: Die Suche mit Platzhalter funktioniert noch nicht auf der Dimensionselement-Ebene. | 21. Oktober 2021 |
-| Analysis Workspace Dark Theme | Dunkles Design ist als Anzeigeoption verfügbar. | 21. Oktober 2021 |
+| Analysis Workspace Dunkles Thema | Dunkles Design ist als Anzeigeoption verfügbar. | 21. Oktober 2021 |
 
 {style=&quot;table-layout:auto&quot;}
 
