Updated by task 'AutomatedMDTask_1678294367398_TM-MT_1678294395492'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics-platform.en/commit/96baa9d6894f496ed40f053f31ff00db1167a1ce

--- a/help/release-notes/2023.md
+++ b/help/release-notes/2023.md
@@ -4,28 +4,53 @@ description: Versionshinweise zu CJA für 2023 anzeigen
 feature: Release Notes
 mini-toc-levels: 2
 exl-id: e6668e32-3322-45f6-a575-413c88097e45
-source-git-commit: 814cb9d011b0d51776fdfe1fdc330775169611df
-workflow-type: ht
-source-wordcount: '469'
-ht-degree: 100%
+source-git-commit: 1abd928447bb0a286dd1feb5c347f09016ec4a17
+workflow-type: tm+mt
+source-wordcount: '872'
+ht-degree: 99%
 
 ---
 
 # Versionshinweise zu Customer Journey Analytics für 2023
 
-## Versionshinweise Januar 2023 {#jan23}
+## Februar 2023 {#feb23}
+
+| Funktion | Beschreibung | [Start des Rollouts](/help/release-notes/releases.md) | [Allgemeine Verfügbarkeit](/help/release-notes/releases.md) |
+| ----------- | ---------- | ----- | --- |
+| **Aktualisierung für CJA-Zielgruppen** | Nachdem Sie eine Zielgruppe erstellt haben, erstellt Adobe für jede neue CJA-Zielgruppe ein Experience Platform-Streaming-Segment. Ein Streaming-Segment wird nur dann erstellt, wenn für Ihre Organisation Streaming-Segmentierung eingerichtet ist. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-components/audiences/publish.html?lang=de#after-audience-created) | Nicht angegeben | 3. Februar 2023 |
+| **Ausblenden von Datumsbereichen für den Vergleich in mobilen Scorecards** | Bei mobilen Scorecards können Sie jetzt Vergleichsdatumsbereiche ausblenden. | Nicht angegeben | 8. Februar 2023 |
+| **Kalenderaktualisierungen in Workspace** | <ul><li>Ankerbedienfielddaten: Sie können die Datumsbereichskomponenten im Verhältnis zum Bedienfeldkalender festlegen. [Weitere Informationen](/help/components/date-ranges/calendar.md)</li><li>Aktualisierungen des Kalenderstils: Die Kalenderstile in der gesamten Benutzeroberfläche wurden aktualisiert, um einen konsistenteren und benutzerfreundlicheren Workflow zu bieten.</li><li>Aktualisierungen der Kalenderformel: Wenn Sie relative Daten verwenden, spiegeln alle Kalenderformeln den Beginn des Bedienfelddatumsbereichs wider. [Weitere Informationen](/help/components/date-ranges/calendar.md)</li></ul> | Nicht angegeben | 8. Februar 2023 |
+| **Aktualisierungen des Datumsbereichs des Bedienfelds** | In Workspace wurden die folgenden Verbesserungen hinzugefügt:<ul><li>Ab der Februarversion basieren die Komponenten- und Datenvorschauen auf dem Datumsbereich des Bedienfelds und nicht auf den letzten 90 Tagen. </li><li>Alle in der linken Leiste aufgelisteten Komponenten sind basierend auf dem Datumsbereich des Bedienfelds verfügbar.</li><li>Alle Datumsvorschauen im Segment und Generatoren für berechnete Metriken basieren auf dem Datumsbereich des Bedienfelds (sofern nicht von den Komponenten-Managern darauf zugegriffen wird, die über kein verknüpftes Bedienfeld verfügen, basieren sie weiterhin auf den letzten 90 Tagen).</li><li>Bei jeder Datenvorschau werden Daten oder Komponenten basierend auf dem Datumsbereich des Bedienfelds angezeigt.</li></ul> | Nicht angegeben | 8. Februar 2023 |
+| **Zeilen-/Spaltenfilter für Adobe Analytics Source Connector-Streaming** | Analytics Source Connector in Adobe Experience Platform ermöglicht jetzt das Filtern von Analytics-Daten, mit denen Profile im [Echtzeit-Kundenprofil](https://experienceleague.adobe.com/docs/experience-platform/profile/home.html?lang=de) vorausgefüllt werden.<p>Die Filterung auf Zeilenebene hilft, die Anzahl der mit Profilen verknüpften Ereignisse zu reduzieren. Die Filterung auf Spaltenebene hilft, die Vielfalt der Ereignisse selbst zu reduzieren, und ermöglicht es Ihnen so, die Nutzung von Profilberechtigungen zu optimieren. Diese Filterung gilt nur für Daten, die an das Echtzeit-Kundenprofil und den [Identity Service](https://experienceleague.adobe.com/docs/experience-platform/identity/home.html?lang=de) gesendet werden.<p>**Die Filterung wirkt sich nicht auf die Daten aus, die zur Verwendung in Anwendungen wie Customer Journey Analytics an Data Lake gesendet werden**. [Weitere Informationen](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=de#filtering-for-profile) | Nicht angegeben | Geplant für den 29. März 2023 |
+
+{style="table-layout:auto"}
+
+### Fehlerbehebungen in Customer Journey Analytics
+
+AN-309106
+
+### Wichtige Hinweise für CJA-Admins
+
+| Hinweis | Hinweis hinzugefügt oder aktualisiert | Beschreibung |
+| --- | --- | --- |
+| Keine aktuellen Hinweise | Nicht angegeben | nicht angegeben |
+
+{style="table-layout:auto"}
+
+
+## Januar 2023 {#jan23}
 
 | Funktion | Beschreibung | [Start des Rollouts](/help/release-notes/releases.md) | [Allgemeine Verfügbarkeit](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- | --- |
 | **Objekt-Array-Unterstützung für Profil- und Lookup-Datensätze** | Profildatensätze und Lookup-Datensätze unterstützen jetzt Objekt-Arrays zur Verwendung in CJA. | 11. Januar 2023 | 19. Januar 2023 |
-| **Ordner in Workspace** | Mithilfe der Ordner können Sie Ihre Projekte ordnen und kategorisieren, sodass sie besser auffindbar und abrufbar sind. Darüber hinaus ermöglicht ein freigegebener **[!UICONTROL Unternehmensordner]** Admins die einfache Erstellung von Inhalten und deren Freigabe für alle Analysis Workspace benutzenden Personen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/build-workspace-project/workspace-folders/about-folders.html?lang=de) | Nicht angegeben | 11. Januar 2023 |
-| **Standard-Landingpage** | Die [neue Landingpage](/help/getting-started/landing.md) wurde Anfang 2022 eingeführt und wird ab **11. Januar 2023** standardmäßig allen Benutzenden angezeigt. Die veraltete Seite wird entfernt, sodass nur mehr die neue Seite zur Verfügung steht. | Nicht angegeben | 11. Januar 2023 |
+| **Ordner in Analysis Workspace** | Mit Ordnern können Sie Ihre Projekte organisieren und kategorisieren, um einfacher auf ihre Inhalte zugreifen zu können. Darüber hinaus ermöglicht ein gemeinsam genutzter **[!UICONTROL Unternehmensordner]** Administratoren bzw. Administratorinnen die einfache Erstellung und Freigabe von Inhalten für alle Analysis Workspace-Benutzenden. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/build-workspace-project/workspace-folders/about-folders.html?lang=de) | Nicht angegeben | 11. Januar 2023 |
+| **Standard-Landingpage** | Die [neue Landingpage](/help/getting-started/landing.md) wurde Anfang dieses Jahres eingeführt und wird ab **11. Januar 2023** standardmäßig allen Benutzenden angezeigt. Die veraltete Landingpage wird entfernt, sodass dann nur mehr die neue Seite verfügbar ist. | Nicht angegeben | 11. Januar 2023 |
 | **Seite „Projekt-Manager“ entfernt** | Mit der Veröffentlichung der neuen Landingpage haben wir die Seite **[!UICONTROL Projekt-Manager]** unter **[!UICONTROL Customer Journey Analytics]** > **[!UICONTROL Komponenten]** entfernt. Die neue Landingpage enthält sämtliche Funktionen der alten Projekt-Manager-Seite und noch viel mehr. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-overview/landing.html?lang=de#deprecate-pm-page) | Nicht angegeben | 11. Januar 2023 |
 | **Erstellen von Zeitplänen für Arbeitsmappen in Report Builder** | In Customer Journey Analytics können Sie Zeitpläne erstellen, um in regelmäßigen Abständen Arbeitsmappen zu versenden. Empfänger und Empfängerinnen erhalten somit regelmäßig die neuesten Aktualisierungen Ihrer Arbeitsmappen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-reportbuilder/schedule-reportbuilder.html?lang=de) | Nicht angegeben | 11. Januar 2023 |
 | **Automatisches Speichern neuer Projekte** | Analysis Workspace speichert jetzt automatisch neu erstellte Projekte. Wenn Sie aus irgendeinem Grund unerwartet den Zugriff auf ein neu erstelltes Projekt verlieren, bevor Sie es manuell speichern konnten, ist jetzt eine Wiederherstellungsversion Ihres Projekts verfügbar. Zuvor wurden Projekte erst automatisch gespeichert, nachdem sie zuvor manuell gespeichert worden waren. [Weitere Informationen](/help/analysis-workspace/build-workspace-project/save-projects.md) | Nicht angegeben | 11. Januar 2023 |
-| **Verbesserte Benutzervoreinstellungen** | Sie können jetzt zusätzliche Voreinstellungen auf Benutzerebene konfigurieren (in [!UICONTROL Komponenten] > [!UICONTROL Voreinstellungen]). Sie können Benutzervoreinstellungen für Projekte, Tabellen und Visualisierungen festlegen. Die Seite „Voreinstellungen“ enthält jetzt auch die folgenden neuen Registerkarten, von denen jede viele neue Konfigurationsmöglichkeiten bietet:<ul><li>Freiformtabelle</li><li>Visualisierungen&lt;/li></ul>  Darüber hinaus sind jetzt weitere Voreinstellungen auf den Registerkarten **[!UICONTROL Allgemein]** und **[!UICONTROL Projekt]** verfügbar.<p>Zuvor waren viele dieser Voreinstellungen nur für einzelne Projekte, Tabellen und Visualisierungen konfigurierbar. [Weitere Informationen](/help/analysis-workspace/user-preferences.md) | Nicht angegeben | 11. Januar 2023 |
+| **Erweiterte Benutzervoreinstellungen** | Sie können jetzt zusätzliche Voreinstellungen auf Benutzerebene konfigurieren (in [!UICONTROL Komponenten] > [!UICONTROL Voreinstellungen]). Beim Festlegen der Benutzervoreinstellungen können Sie Optionen für Ihre Projekte, Tabellen und Visualisierungen auswählen. Die Seite „Voreinstellungen“ enthält jetzt die folgenden neuen Registerkarten, von denen jede viele neue Konfigurationsoptionen bietet:<ul><li>Freiformtabelle</li><li>Visualisierungen&lt;/li></ul>  Darüber hinaus sind jetzt weitere Voreinstellungen auf den Registerkarten **[!UICONTROL Allgemein]** und **[!UICONTROL Projekt]** verfügbar.<p>Zuvor waren viele dieser Voreinstellungen nur für einzelne Projekte, Tabellen und Visualisierungen konfigurierbar. [Weitere Informationen](/help/analysis-workspace/user-preferences.md) | Nicht angegeben | 11. Januar 2023 |
 
-{style=&quot;table-layout:auto&quot;}
+{style="table-layout:auto"}
 
 ### Fehlerbehebungen
 
@@ -37,4 +62,4 @@ AN-287349; AN-301684; AN-305491; AN-305769; AN-307912
 | --- | --- | --- |
 | **Verbessertes IP-Geolokalisierungs-Mapping** | 29. September 2022 | Der Anbieter von IP-Suchen für Adobe, Digital Element, aktualisiert auf einen neuen verbesserten Datensatz (NetAcuity Pulse) für die Geolokalisierung von IPs. Adobe Analytics hat die Einführung dieses neuen Datensatzes auf **11. Januar 2023** verschoben. Die neue Datenbank wird genauer sein als frühere Versionen. Einige Geolokalisierungen von IPs werden sich ändern/verbessern, wenn die neue Datenbank übernommen wird.<p> CJA-Daten, die über den [!UICONTROL Analytics Source Connector] bereitgestellt werden, nutzen ebenfalls automatisch die neuen Mappings. |
 
-{style=&quot;table-layout:auto&quot;}
+{style="table-layout:auto"}
